--- a/style.css
+++ b/style.css
@@ -1,1 +1,124 @@
 @import "./Normalize.css";
+@import url("https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap");
+
+
+
+:root {
+    font-family: "Goudy Bookletter 1911", sans-serif;
+    caret-color: transparent;
+}
+
+body {
+    height: 100vh;
+
+    background-image: url("./images/background.png");
+
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+header {
+    background-color: #192224;
+    color: white;
+    position: sticky;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.logo {
+    height: 5rem;
+    margin: .5rem;
+}
+
+.logo-name-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.name-wrapper>.name {
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.name-wrapper>.servicii {
+    font-size: 2rem;
+    font-style: italic;
+}
+
+.welcome-wrapper {
+    background-color: #ffffffa0;
+    font-weight: normal;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 10vh;
+}
+
+.welcome-text-wrapper>.title {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.welcome-text-wrapper>div {
+    font-size: 1.25rem;
+    text-align: center;
+}
+
+.services-wrapper {
+    background-color: #ffffffa0;
+    padding: 1rem;
+    margin: 10vh 1rem 1rem;
+}
+
+.service-card>img {
+    width: 30vmin;
+    border-radius: 10%;
+}
+
+.service-card>.service-text {
+    font-size: 1.1rem;
+    text-align: center;
+}
+
+.service-card>.service-text>span {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.services {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.service-card {
+    flex: 1;
+    border: 2px black solid;
+    border-radius: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+
+@media screen and (max-width: 800px) {
+    .welcome-wrapper {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .services-wrapper {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
