--- a/style.css
+++ b/style.css
@@ -72,10 +72,17 @@ header {
     text-align: center;
 }
 
+.services-title {
+    text-align: center;
+    font-size: 2.25rem;
+    margin-top: .5rem;
+}
+
 .services-wrapper {
     background-color: #ffffffa0;
     padding: 1rem;
     margin: 10vh 1rem 1rem;
+    margin-bottom: 10vh;
 }
 
 .service-card>img {
@@ -108,6 +115,33 @@ header {
     align-items: center;
     margin: 1rem;
     padding: 1rem;
+}
+
+footer {
+    background-color: #192224;
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: large;
+    padding: 1.5rem;
+
+}
+
+footer>.contact-info-wrapper a {
+    color: lightblue;
+}
+
+.contact-info-wrapper>:nth-child(2) {
+    margin: 1rem 0;
+}
+
+.contact-info-wrapper {
+    border-top: 2px white solid;
+    border-bottom: 2px white solid;
+    padding: .5rem;
 }
 
 
